<?xml version="1.0"?>
<package format="3">
  <name>ethernet_msgs</name>
  <version>1.0.0</version>
  <description>Ethernet Messages</description>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <!-- ROS 1 (catkin) -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">message_generation</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_generation</exec_depend>

  <!-- ROS 2 (ament / rosidl) -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- both ROS versions -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
